# cbrainx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  bm_matrix.cc  ex_act_funcs.cc  ex_image.cc  ex_img_proc.cc  ex_matrix.cc  ex_shape.cc  ex_soft_max.cc  ex_table.cc  ex_tensor.cc  ex_tensor_fun.cc
examples/digitRecognizer/: CMakeLists.txt
examples/digitRecognizer/src/: main.cc
examples/estateAgent/: CMakeLists.txt
examples/estateAgent/res/test/: x.tsv  y.tsv
examples/estateAgent/res/train/: x.tsv  y.tsv
examples/estateAgent/src/: main.cc
examples/ionosphere/: CMakeLists.txt
examples/ionosphere/res/: test.ionosphere.csv  train.ionosphere.data.csv
examples/ionosphere/src/: main.cc
examples/misc/: CMakeLists.txt  bm_matrix.cc  exImage.cc  exLossFuncs.cc  exOptimizers.cc  exShape.cc  exTensor.cc  exTensorFun.cc  ex_act_funcs.cc  ex_image.cc  ex_img_proc.cc  ex_matrix_fun.cc  ex_net.cc  ex_shape.cc  ex_soft_max.cc  ex_softmax.cc  ex_tensor.cc  ex_tensor_fun.cc
examples/pimaIndiansDiabetes/: CMakeLists.txt
examples/pimaIndiansDiabetes/src/: main.cc
include/: CMakeLists.txt
include/cbrainx/: abstractLayer.hh  abstract_layer.hh  activationFunctions.hh  activationLayer.hh  activation_functions.hh  activation_layer.hh  cbrainx.hh  customViews.hh  custom_iterators.hh  custom_views.hh  dataset.hh  denseLayer.hh  dense_layer.hh  exceptions.hh  image.hh  imgProc.hh  img_proc.hh  iterators.hh  lossFunctions.hh  loss_functions.hh  matrix.hh  neuralNet.hh  neural_net.hh  neural_network.hh  optimizers.hh  shape.hh  soft_max.hh  softmax.hh  stopwatch.hh  table.hh  tensor.hh  typeConcepts.hh  type_aliases.hh  type_concepts.hh  utility.hh  version.hh
src/: CMakeLists.txt  abstractLayer.cc  abstract_layer.cc  activationFunctions.cc  activationLayer.cc  activation_functions.cc  activation_layer.cc  dataset.cc  denseLayer.cc  dense_layer.cc  exceptions.cc  image.cc  imgProc.cc  img_proc.cc  lossFunctions.cc  loss_functions.cc  matrix.cc  neuralNet.cc  neural_net.cc  neural_network.cc  optimizers.cc  shape.cc  soft_max.cc  softmax.cc  stopwatch.cc  table.cc
